# dataset-curation-pipeline

./: .env.template  .gitignore  PROD_HANDOFF.md  README.md  SETUP.md  SETUPDB.md  SETUPadmin.md  cli.py  config.py  db.py  google_colab_draft.py  pyproject.toml  requirements-roboflow-cpu.txt  requirements-roboflow-gpu-extras.txt  requirements-roboflow-gpu.txt
commnds/: diverse.py  ingest.py  similar.py
repoguide/: HOWTOUSE.md  SETUP.md  SETUPDB.md
services/: embedding.py  roboflow.py  storage.py
