[project]
name = "dataset-curation-pipeline"
version = "0.1.0"
description = "CLI utilities for image ingestion, dedupe, and dataset curation."
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "psycopg[binary]>=3.2.0",
  "psycopg_pool>=3.2.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "tqdm>=4.66.0",
]
